Fixed wrong align in button text

--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -144,6 +144,9 @@
     font-weight: 500;
     color: white;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     &:hover {
       text-decoration: none;
